--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,97 @@
-*{
-    margin: 0 auto;
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+* {
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
+
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    margin:0;
-    padding:0;
-    width:100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(45deg, #ffffff 10%, #ffdada 100%) no-repeat;
 }
-input{
-    width:10%;
+
+input {
+    width: 10%;
+    height: 3vh;
+    margin: 1vh auto;
+    text-align:center;
+    padding: 1vh;
+    background-color: transparent;
+    border: solid rgb(103, 194, 255);
+    border-radius: 10px;
+    box-shadow: none;
+    outline: none;
+    border-width: 10px;
+}
+
+button {
+    width: 10%;
+    height: 10vh;
     margin: 0 auto;
+    padding: 1vh;
+    background-color: transparent;
+    border: solid rgb(103, 194, 255);
+    border-radius: 10px;
+    box-shadow: none;
+    outline: none;
+    border-width: 10px;
 }
-button{
-    width:10%;
-    margin:0 auto;
-}
+
 #setup {
     margin: 20px;
-    display:grid;
-
-    align-self:center;
-    width:100%;
+    display: grid;
 }
 
-#teams, #matches {
+#teams,
+#matches {
     margin: 20px;
+    background-color: transparent;
 }
 
 .team {
     display: inline-block;
     width: 45%;
     vertical-align: top;
+    background-color: transparent;
 }
 
 .team h2 {
     text-align: center;
+    background-color: transparent;
 }
 
 .player {
     list-style-type: none;
+    background-color: transparent;
 }
 
 .court {
     margin: 10px 0;
+    background-color: transparent;
+}
+
+#all {
+    margin: 0 auto;
+    background-color: transparent;
+}
+#pScreen{
+    background: linear-gradient(45deg, #ffffff 10%, #ffdada 100%) no-repeat;
+
+}
+ol{
+    background-color: transparent;
+}
+ul{
+    background-color: transparent;
+}
+li{
+    background-color: transparent;
 }
