--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 * {
+    list-style-type: none;
     padding: 0;
     margin: 0;
     background-color: transparent;
