--- a/styles.css
+++ b/styles.css
@@ -102,3 +102,8 @@ ul{
 li{
     background-color: transparent;
 }
+#winner{
+    height:fit-content;
+    width:fit-content;
+    border-width:5px;
+}
